copy style to .en page, not fully translate yet

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -1,5 +1,5 @@
 <!--
-.. title: PyCon Thailand 2019
+.. title: PyCon Thailand 2018
 .. slug: index
 .. date: 2019-02-17 12:20:00 UTC+07:00
 .. tags:
@@ -12,30 +12,56 @@
 
 <!-- frontpage -->
 <div class="section first">
-    <div class="row">
-        <div class="col-sm-3 offset-sm-1">
-            <h1>
-                <img class="img-responsive" src="/logo2019.png">
-            </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="main-title">
+                    PyconThailand
+                    <p class="place">
+                        BANGKOK
+                    </p>
+                    <p class="when">
+                        JUNE 15-16 2019
+                    </p>
+                    <p class="edition">
+                        2ND EDITION
+                    </p>
+                </div>
+                <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
+                <p class="invitation">
+                    Pycon is back! Join us for a two day conference for developers in the heart of Bangkok.
+                </p>
+            </div>
         </div>
-        <div class="col-sm-6 offset-sm-1">
-            <div class="container admonition admonition-pycon-thailand-2018 text-center" style="background-color: rgba(255,255,255,0.55);">
-                <h2 class="admonition-title">
-                    <a href=".">PyCon Thailand 2019</a>
-                </h2>
-                <p class="admonition-date">June 16 & June 17<br>Bangkok</p>
-                <ul class="list-inline banner-social-buttons last">
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/pyconthailand" class="btn btn-secondary btn-lg" target="_blank">
-                            <i class="fa fa-twitter fa-fw"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.facebook.com/pyconthailand/" class="btn btn-secondary btn-lg" target="_blank">
-                            <i class="fa fa-facebook fa-fw"></i>
-                        </a>
-                    </li>
-                </ul>
+    </div>
+</div>
+
+<!-- news -->
+<div class="section news-section">
+    <div class="container">
+        <div class="row">
+            <div class="news col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="news-title red-followline">News</h1>
+                </div>
+                <div class="col-sm-6 offset-sm-3 schedule">
+                    <p><span class="event-date">2018-06-17 09:13</span> <span class="event-description">Monty Python quiz</span></p>
+                    <p><span class="event-date">2018-06-15 13:00</span> <span class="event-description">Reay for the first PyCon Thailand?</span></p>
+                    <p><span class="event-date">2018-06-14 16:55</span> <span class="event-description">Join Code War event!</span></p>
+                </div>
+            </div>
+            <div class="countdown col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="countdown-title red-prepostline">
+                        PYCON THAILAND STARTS IN
+                    </h1>
+                    <h1 class="countdown-timer">
+                        100 days 23 hrs 30 min 10 sec
+                    </h1>
+                    <a href="#" class="btn-primary btn-lg get-ticket-btn">
+                        GET TICKETS
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -43,184 +69,132 @@
 
 <!-- keynote -->
 <div class="section second">
-    <div style="display: none;">
-        {{% front_panel
-            event_heading='PyCon Thailand 2019' %}}
-    </div>
-    <div class="keynote row image-bg">
-        <div class="col-sm-12">
-            <h2 class="keynote-title">KEYNOTE SPEAKERS</h2>
-        </div>
-        <div class="col-sm-8">
-            <section class="row section-Wes">
-                <div class="col-sm-2">
-                    <img class="img-responsive rounded" src="wes-2017-01-12-small.png">
-                </div>
-                <article class="col-sm-10">
-                    <p class="name">
-                        Wes Mckinney
-                    </p>
-                    <p class="website">
-                        <a href="#">http://wesmckinney.com</a>
-                    </p>
-                    <p class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                    </p>
-                </article>
-            </section>
-            <section class="row section-tiwa">
-                <article class="col-sm-10">
-                    <p class="name">
-                        Wes Mckinney
-                    </p>
-                    <p class="website">
-                        <a href="#">http://wesmckinney.com</a>
-                    </p>
-                    <p class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                    </p>
-                </article>
-                <div class="col-sm-2">
-                    <img class="img-responsive rounded" src="tiwa-york.jpeg">
-                </div>
-            </section>
-        </div>
-        <!--<div class="col-sm-3 image-bg">
-            <img src="/bg-01.png">
-        </div>-->
-    </div>
-</div>
-
-<!-- codewar -->
-<div class="section third">
-    <div class="code-war">
-        <h1>CODE WAR</h1>
-        <p>
-            For everyone who's in town the day before, we're having a fun<br>codewar event on the evening of Friday, 15 June.<br>
-            Check the Code War page for details.
-        </p>
-    </div>
-</div>
-
-<!-- latest new -->
-<div class="section fourth">
-    <section class="container section-lastest-news">
-        <h2>Lastest News <span>
-        <a href="#">View more</a></span></h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
+    <div class="container">
+        <div class="keynote row">
+            <div class="col-sm-12">
+                <h2 class="keynote-title red-followline">Keynote Speakers</h2>
             </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
+            <div class="col-sm-12">
+                <section class="row speaker">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="wes-2017-01-12-small.png">
+                        <p class="name">
+                            Wes Mckinney
+                        </p>
+                        <p class="org">
+                            PANDAS
+                        </p>
+                        <p class="website">
+                            <a href="#">http://wesmckinney.com</a>
+                        </p>
+                    </div>
+                    <article class="col-sm-8">
+                        <p class="content">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                        </p>
+                    </article>
+                </section>
+                <section class="row speaker">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="tiwa-york.jpeg">
+                        <p class="name">
+                            Wes Mckinney
+                        </p>
+                        <p class="org">
+                            KAIDEE<br/>headcoach
+                        </p>
+                        <p class="website">
+                            <a href="#">http://wesmckinney.com</a>
+                        </p>
+                    </div>
+                    <article class="col-sm-8">
+                        <p class="content">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                        </p>
+                    </article>
+                </section>
             </div>
         </div>
-    </section>
+    </div>
 </div>
 
 <!-- sponsor -->
-<section class="section fifth ">
-    <section class="container sponsor">
-        <h2>Gold Sponsor</h2>
-        <div class="row">
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-        </div>
-        <h2>Silver Sponsor</h2>
-        <div class="row">
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-        </div>
-    </setion>
-</section>
-
-<!-- footer -->
-<footer>
+<section class="section sponsor-section fp-auto-height">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 about">
-                <p>About</p>
-                <p>Pycon Thailand is a conference about<br>the programming language Python.<br>
-                It is a community effort driven by <br> the members of the Python Community<br>in Bangkok
-                </p>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <i class="fa-fw fa fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-fw fa fa-twitter"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <img src="logo2019.png">
-            </div>
-            <div class="col-md-5 when-where">
-                <p>June 16 - 17 2018</p>
-                <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
-            </div>
+            <section class="welcome-submission col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="welcome-submission-title red-prepostline">WE WELCOME YOUR SUBMISSION!</h1>
+                    <p class="welcome-submission-text">Join our keynote speakers for the 2nd edition of Pycon Thailand. We're open to submission for papers now!</p>
+                </div>
+                <a href="#" class="btn-primary btn-lg get-ticket-btn">
+                    SUBMIT NOW
+                </a>
+            </section>
+            <section class="sponsor col-sm-12">
+                <h2 class="sponsor-title">GOLD SPONSOR</h2>
+                <div class="row">
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                </div>
+                <h2 class="sponsor-title">SILVER SPONSOR</h2>
+                <div class="row">
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                </div>
+            </setion>
         </div>
     </div>
-</footer>
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 about">
+                    <p>About</p>
+                    <p>Pycon Thailand is a conference about<br>the programming language Python.<br>
+                    It is a community effort driven by <br> the members of the Python Community<br>in Bangkok
+                    </p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa-fw fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-fw fa fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <img src="logo2019.png">
+                </div>
+                <div class="col-md-5 when-where">
+                    <p>June 16 - 17 2018</p>
+                    <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</section>
