--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -18,13 +18,13 @@
                 <div class="main-title">
                     PyconThailand
                     <p class="place">
-                        BANGKOK
+                        กรุงเทพ
                     </p>
                     <p class="when">
-                        JUNE 15-16 2019
+                        15-16 มิถุนายน 2562
                     </p>
                     <p class="edition">
-                        2ND EDITION
+                        ครั้งที่ 2
                     </p>
                 </div>
                 <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="news col-sm-12">
                 <div class="col-sm-12">
-                    <h1 class="news-title red-followline">News</h1>
+                    <h1 class="news-title red-followline">แจ้งข่าว</h1>
                 </div>
                 <div class="col-sm-6 offset-sm-3 schedule">
                     <p><span class="event-date">2018-06-17 09:13</span> <span class="event-description">Monty Python quiz</span></p>
@@ -53,13 +53,13 @@
             <div class="countdown col-sm-12">
                 <div class="col-sm-12">
                     <h1 class="countdown-title red-prepostline">
-                        PYCON THAILAND STARTS IN
+                        PYCON THAILAND จะเริ่มใน
                     </h1>
                     <h1 class="countdown-timer">
                         100 days 23 hrs 30 min 10 sec
                     </h1>
                     <a href="#" class="btn-primary btn-lg get-ticket-btn">
-                        GET TICKETS
+                        ขอรับตั๋ว
                     </a>
                 </div>
             </div>
