--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -45,18 +45,22 @@
                     <h1 class="news-title red-followline">News</h1>
                 </div>
                 <div class="col-sm-6 offset-sm-3 schedule">
-                    <p><span class="event-date">2018-06-17 09:13</span> <span class="event-description">Monty Python quiz</span></p>
-                    <p><span class="event-date">2018-06-15 13:00</span> <span class="event-description">Reay for the first PyCon Thailand?</span></p>
-                    <p><span class="event-date">2018-06-14 16:55</span> <span class="event-description">Join Code War event!</span></p>
+                    {{% post-list stop=3 %}}
+                    {{% /post-list %}}
                 </div>
             </div>
             <div class="countdown col-sm-12">
                 <div class="col-sm-12">
+                    <!-- TODO
                     <h1 class="countdown-title red-prepostline">
                         PYCON THAILAND STARTS IN
                     </h1>
                     <h1 class="countdown-timer">
                         100 days 23 hrs 30 min 10 sec
+                    </h1>
+                    -->
+                    <h1 class="countdown-title red-prepostline">
+                        PYCON THAILAND STARTS SOON
                     </h1>
                     <a href="#" class="btn-primary btn-lg get-ticket-btn">
                         GET TICKETS
@@ -76,6 +80,8 @@
             </div>
             <div class="col-sm-12">
                 <section class="row speaker">
+                    <p>Coming soon</p>
+                    <!--
                     <div class="col-sm-3">
                         <img class="img-responsive" src="wes-2017-01-12-small.png">
                         <p class="name">
@@ -93,7 +99,9 @@
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
                         </p>
                     </article>
+                    -->
                 </section>
+                <!-- TODO
                 <section class="row speaker">
                     <div class="col-sm-3">
                         <img class="img-responsive" src="tiwa-york.jpeg">
@@ -113,6 +121,7 @@
                         </p>
                     </article>
                 </section>
+                -->
             </div>
         </div>
     </div>
@@ -131,21 +140,10 @@
                     SUBMIT NOW
                 </a>
             </section>
+            <!-- TODO
             <section class="sponsor col-sm-12">
                 <h2 class="sponsor-title">GOLD SPONSOR</h2>
                 <div class="row">
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
                     <div class="col-sm-4 rounded">
                         <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
                     </div>
@@ -162,7 +160,8 @@
                         <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
                     </div>
                 </div>
-            </setion>
+            </section>
+            -->
         </div>
     </div>
     <!-- footer -->
@@ -192,7 +191,7 @@
                 </div>
                 <div class="col-md-5 when-where">
                     <p>June 16 - 17 2018</p>
-                    <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
+                    <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>Thon Buri Bangkok 10600</p>
                 </div>
             </div>
         </div>
