Add alt for img, add TODO comment

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -81,7 +81,7 @@
             <div class="col-sm-12">
                 <section class="row speaker">
                     <p>Coming soon</p>
-                    <!--
+                    <!-- TODO
                     <div class="col-sm-3">
                         <img class="img-responsive" src="wes-2017-01-12-small.png">
                         <p class="name">
@@ -187,7 +187,7 @@
                     </ul>
                 </div>
                 <div class="col-md-2">
-                    <img src="logo2019.png">
+                    <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
                 </div>
                 <div class="col-md-5 when-where">
                     <p>June 16 - 17 2018</p>
