Fix links, use shortcodes

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -57,9 +57,9 @@
                     <h1 class="countdown-timer" id="countdown-timer">
                         100 days 23 hrs 30 min 10 sec
                     </h1>
-                    <a href="#" class="btn-primary btn-lg get-ticket-btn">
-                        ขอรับตั๋ว
-                    </a>
+                    <span class="btn-primary btn-lg get-ticket-btn">
+                        {{% doc %}}ขอรับตั๋ว <buy-tickets>{{% /doc %}}
+                    </span>
                 </div>
             </div>
         </div>
@@ -131,9 +131,9 @@
                     <h1 class="welcome-submission-title red-prepostline">WE WELCOME YOUR SUBMISSION!</h1>
                     <p class="welcome-submission-text">Join our keynote speakers for the 2nd edition of Pycon Thailand. We're open to submission for papers now!</p>
                 </div>
-                <a href="#" class="btn-primary btn-lg get-ticket-btn">
-                    SUBMIT NOW
-                </a>
+                <span href="#" class="btn-primary btn-lg get-ticket-btn">
+                    {{% doc %}}Sponsorship{{% /doc %}}
+                </span>
             </section>
             <!-- TODO
             <section class="sponsor col-sm-12">
